[package]
name = "utfq"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
either = "1.15.0"
fjall = "3.0.2"
hyperrat = "0.1.1"
ignore = "0.4.25"
osc8 = "0.1.0"
postcard = "1.1.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
terminal_size = "0.4.3"
url = "2.5.8"
yansi = "1.0.1"

[profile.release]
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
